Solve curly brackets escape helm/grafana shit

--- a/stable/prometheus-operator/templates/grafana/dashboards/alcide-mongodb-in-memory-dashboard.yaml
+++ b/stable/prometheus-operator/templates/grafana/dashboards/alcide-mongodb-in-memory-dashboard.yaml
@@ -544,7 +544,7 @@ data:
           "format": "time_series",
           "interval": "$interval",
           "intervalFactor": 1,
-          "legendFormat": "{{type}}",
+          "legendFormat": "{{`{{type}}`}}",
           "refId": "A",
           "step": 300
         }
@@ -854,7 +854,7 @@ data:
           "format": "time_series",
           "interval": "$interval",
           "intervalFactor": 1,
-          "legendFormat": "{{type}}",
+          "legendFormat": "{{`{{type}}`}}",
           "refId": "A",
           "step": 300
         }
@@ -953,7 +953,7 @@ data:
           "format": "time_series",
           "interval": "$interval",
           "intervalFactor": 1,
-          "legendFormat": "{{type}}",
+          "legendFormat": "{{`{{type}}`}}",
           "metric": "",
           "refId": "A",
           "step": 300
@@ -1050,7 +1050,7 @@ data:
           "hide": false,
           "interval": "$interval",
           "intervalFactor": 1,
-          "legendFormat": "{{type}}",
+          "legendFormat": "{{`{{type}}`}}",
           "refId": "J",
           "step": 300
         }
@@ -1148,7 +1148,7 @@ data:
           "hide": false,
           "interval": "$interval",
           "intervalFactor": 1,
-          "legendFormat": "{{state}}",
+          "legendFormat": "{{`{{state}}`}}",
           "refId": "J",
           "step": 300
         },
@@ -1381,7 +1381,7 @@ data:
           "format": "time_series",
           "interval": "$interval",
           "intervalFactor": 1,
-          "legendFormat": "{{state}}",
+          "legendFormat": "{{`{{state}}`}}",
           "metric": "",
           "refId": "A",
           "step": 300
