--- a/stable/prometheus-operator/templates/grafana/dashboards/alcide-mongodb-overview-dashboard.yaml
+++ b/stable/prometheus-operator/templates/grafana/dashboards/alcide-mongodb-overview-dashboard.yaml
@@ -120,7 +120,7 @@ data:
                   "hide": false,
                   "interval": "$interval",
                   "intervalFactor": 1,
-                  "legendFormat": "{{type}}",
+                  "legendFormat": "{{`{{type}}`}}",
                   "refId": "J",
                   "step": 300
               },
@@ -130,7 +130,7 @@ data:
                   "hide": false,
                   "interval": "$interval",
                   "intervalFactor": 1,
-                  "legendFormat": "repl_{{type}}",
+                  "legendFormat": "repl_{{`{{type}}`}}",
                   "refId": "A",
                   "step": 300
               },
@@ -365,7 +365,7 @@ data:
                   "hide": false,
                   "interval": "$interval",
                   "intervalFactor": 1,
-                  "legendFormat": "{{state}}",
+                  "legendFormat": "{{`{{state}}`}}",
                   "refId": "J",
                   "step": 300
               }
@@ -477,7 +477,7 @@ data:
                   "hide": false,
                   "interval": "$interval",
                   "intervalFactor": 1,
-                  "legendFormat": "{{state}}",
+                  "legendFormat": "{{`{{state}}`}}",
                   "refId": "J",
                   "step": 300
               }
@@ -589,7 +589,7 @@ data:
                   "hide": false,
                   "interval": "$interval",
                   "intervalFactor": 1,
-                  "legendFormat": "{{type}}",
+                  "legendFormat": "{{`{{type}}`}}",
                   "refId": "J",
                   "step": 300
               }
@@ -812,7 +812,7 @@ data:
                   "format": "time_series",
                   "interval": "$interval",
                   "intervalFactor": 1,
-                  "legendFormat": "{{state}}",
+                  "legendFormat": "{{`{{state}}`}}",
                   "metric": "",
                   "refId": "A",
                   "step": 300
@@ -1161,7 +1161,7 @@ data:
                   "hide": false,
                   "interval": "$interval",
                   "intervalFactor": 1,
-                  "legendFormat": "{{type}}",
+                  "legendFormat": "{{`{{type}}`}}",
                   "refId": "J",
                   "step": 300
               }
