--- a/stable/prometheus-operator/templates/grafana/dashboards/alcide-mongodb-wiredtiger-dashboard.yaml
+++ b/stable/prometheus-operator/templates/grafana/dashboards/alcide-mongodb-wiredtiger-dashboard.yaml
@@ -393,7 +393,7 @@ data:
           "format": "time_series",
           "interval": "$interval",
           "intervalFactor": 1,
-          "legendFormat": "{{type}}",
+          "legendFormat": "{{`{{type}}`}}",
           "refId": "A",
           "step": 300
         }
@@ -596,7 +596,7 @@ data:
           "format": "time_series",
           "interval": "$interval",
           "intervalFactor": 1,
-          "legendFormat": "{{type}}",
+          "legendFormat": "{{`{{type}}`}}",
           "refId": "A",
           "step": 300
         }
@@ -692,7 +692,7 @@ data:
           "hide": false,
           "interval": "$interval",
           "intervalFactor": 1,
-          "legendFormat": "{{type}}",
+          "legendFormat": "{{`{{type}}`}}",
           "refId": "J",
           "step": 300
         }
@@ -791,7 +791,7 @@ data:
           "format": "time_series",
           "interval": "$interval",
           "intervalFactor": 1,
-          "legendFormat": "{{type}}",
+          "legendFormat": "{{`{{type}}`}}",
           "metric": "",
           "refId": "B",
           "step": 300
@@ -888,7 +888,7 @@ data:
           "format": "time_series",
           "interval": "$interval",
           "intervalFactor": 1,
-          "legendFormat": "{{type}}",
+          "legendFormat": "{{`{{type}}`}}",
           "refId": "A",
           "step": 300
         }
@@ -998,7 +998,7 @@ data:
           "format": "time_series",
           "interval": "$interval",
           "intervalFactor": 1,
-          "legendFormat": "{{type}}",
+          "legendFormat": "{{`{{type}}`}}",
           "metric": "",
           "refId": "B",
           "step": 300
@@ -1093,7 +1093,7 @@ data:
           "format": "time_series",
           "interval": "$interval",
           "intervalFactor": 1,
-          "legendFormat": "{{type}}",
+          "legendFormat": "{{`{{type}}`}}",
           "refId": "A",
           "step": 300
         }
@@ -1298,7 +1298,7 @@ data:
           "format": "time_series",
           "interval": "$interval",
           "intervalFactor": 1,
-          "legendFormat": "{{type}}",
+          "legendFormat": "{{`{{type}}`}}",
           "refId": "A",
           "step": 300
         }
@@ -1395,7 +1395,7 @@ data:
           "format": "time_series",
           "interval": "$interval",
           "intervalFactor": 1,
-          "legendFormat": "{{type}}",
+          "legendFormat": "{{`{{type}}`}}",
           "refId": "A",
           "step": 300
         }
@@ -1493,7 +1493,7 @@ data:
           "hide": false,
           "interval": "$interval",
           "intervalFactor": 1,
-          "legendFormat": "{{state}}",
+          "legendFormat": "{{`{{state}}`}}",
           "refId": "J",
           "step": 300
         },
@@ -1629,7 +1629,7 @@ data:
           "format": "time_series",
           "interval": "$interval",
           "intervalFactor": 1,
-          "legendFormat": "{{type}}",
+          "legendFormat": "{{`{{type}}`}}",
           "metric": "",
           "refId": "A",
           "step": 300
@@ -1822,7 +1822,7 @@ data:
           "format": "time_series",
           "interval": "$interval",
           "intervalFactor": 1,
-          "legendFormat": "{{state}}",
+          "legendFormat": "{{`{{state}}`}}",
           "metric": "",
           "refId": "A",
           "step": 300
