Add mongodb alerting rules

--- a/stable/prometheus-operator/templates/grafana/dashboards/alcide-mongodb-replset-dashboard.yaml
+++ b/stable/prometheus-operator/templates/grafana/dashboards/alcide-mongodb-replset-dashboard.yaml
@@ -428,7 +428,7 @@ data:
         "tableColumn": "",
         "targets": [
         {
-          "expr": "(max(mongodb_mongod_replset_member_optime_date{state=\"PRIMARY\", set=\"$replset\"}) - min(mongodb_mongod_replset_member_optime_date{state=\"SECONDARY\"} * on (name) group_left mongodb_mongod_replset_my_name{instance=\"$host\"})) or vector(0)",
+          "expr": "(max(mongodb_mongod_replset_member_optime_date{state=\"PRIMARY\", set=\"$replset\"}) - min(mongodb_mongod_replset_member_optime_date{state=\"SECONDARY\"})) or vector(0)",
           "format": "time_series",
           "interval": "5m",
           "intervalFactor": 1,
@@ -809,7 +809,7 @@ data:
         "steppedLine": false,
         "targets": [
         {
-          "expr": "(max(mongodb_mongod_replset_member_optime_date{state=\"PRIMARY\", set=\"$replset\"}) - min(mongodb_mongod_replset_member_optime_date{state=\"SECONDARY\"} * on (name) group_left mongodb_mongod_replset_my_name{instance=\"$host\"})) or vector(0)",
+          "expr": "(max(mongodb_mongod_replset_member_optime_date{state=\"PRIMARY\", set=\"$replset\"}) - min(mongodb_mongod_replset_member_optime_date{state=\"SECONDARY\"})) or vector(0)",
           "interval": "$interval",
           "intervalFactor": 1,
           "legendFormat": "Lag",
