--- a/stable/prometheus-operator/values.yaml
+++ b/stable/prometheus-operator/values.yaml
@@ -1317,290 +1317,171 @@ prometheus:
   additionalServiceMonitors:
   # Name of the ServiceMonitor to create
   #
+#   - name: "telexporter"
+#
+#    # Additional labels to set used for the ServiceMonitorSelector. Together with standard labels from
+#    # the chart
+#    #
+#     additionalLabels: {}
+#
+#    # Service label for use in assembling a job name of the form <label value>-<port>
+#    # If no label is specified, the service name is used.
+#    #
+#     jobLabel: ""
+#
+#    # Label selector for services to which this ServiceMonitor applies
+#    #
+#     selector:
+#       matchLabels:
+#         metrics: alcide
+#
+#    # Namespaces from which services are selected
+#    #
+#     namespaceSelector:
+#      # Match any namespace
+#      #
+#       any: false
+#
+#      # Explicit list of namespace names to select
+#      #
+#       matchNames:
+#         - "alcide"
+#
+#    # Endpoints of the selected service to be monitored
+#    #
+#     endpoints:
+#      # Name of the endpoint's service port
+#      # Mutually exclusive with targetPort
+#       - port: "http"
+#
+#      # Name or number of the endpoint's target port
+#      # Mutually exclusive with port
+#       - targetPort: "8080"
+#
+#      # File containing bearer token to be used when scraping targets
+#      #
+#         bearerTokenFile: ""
+#
+#      # Interval at which metrics should be scraped
+#      #
+#         interval: 10s
+#
+#      # HTTP path to scrape for metrics
+#      #
+#         path: /metrics
+#
+#      # HTTP scheme to use for scraping
+#      #
+#         scheme: http
+
    - name: "telexporter"
-
-    # Additional labels to set used for the ServiceMonitorSelector. Together with standard labels from
-    # the chart
-    #
      additionalLabels: {}
-
-    # Service label for use in assembling a job name of the form <label value>-<port>
-    # If no label is specified, the service name is used.
-    #
      jobLabel: ""
-
-    # Label selector for services to which this ServiceMonitor applies
-    #
      selector:
        matchLabels:
          metrics: alcide
-
-    # Namespaces from which services are selected
-    #
      namespaceSelector:
-      # Match any namespace
-      #
        any: false
-
-      # Explicit list of namespace names to select
-      #
        matchNames:
          - "alcide"
-
-    # Endpoints of the selected service to be monitored
-    #
      endpoints:
-      # Name of the endpoint's service port
-      # Mutually exclusive with targetPort
        - port: "http"
-
-      # Name or number of the endpoint's target port
-      # Mutually exclusive with port
        - targetPort: "8080"
-
-      # File containing bearer token to be used when scraping targets
-      #
          bearerTokenFile: ""
-
-      # Interval at which metrics should be scraped
-      #
          interval: 10s
-
-      # HTTP path to scrape for metrics
-      #
          path: /metrics
-
-      # HTTP scheme to use for scraping
-      #
          scheme: http
 
    - name: "kafka"
-
-     # Additional labels to set used for the ServiceMonitorSelector. Together with standard labels from
-     # the chart
-     #
      additionalLabels: {}
-
-     # Service label for use in assembling a job name of the form <label value>-<port>
-     # If no label is specified, the service name is used.
-     #
      jobLabel: ""
-
-     # Label selector for services to which this ServiceMonitor applies
-     #
      selector:
        matchLabels:
          metrics: kafka
-
-     # Namespaces from which services are selected
-     #
      namespaceSelector:
-       # Match any namespace
-       #
        any: false
-
-       # Explicit list of namespace names to select
-       #
        matchNames:
          - "alcide"
-
-     # Endpoints of the selected service to be monitored
-     #
      endpoints:
-       # Name of the endpoint's service port
-       # Mutually exclusive with targetPort
        - port: "http"
-
-       # Name or number of the endpoint's target port
-       # Mutually exclusive with port
        - targetPort: "7070"
-
-         # File containing bearer token to be used when scraping targets
-         #
          bearerTokenFile: ""
-
-         # Interval at which metrics should be scraped
-         #
          interval: 10s
-
-         # HTTP path to scrape for metrics
-         #
          path: /metrics
-
-         # HTTP scheme to use for scraping
-         #
          scheme: http
 
    - name: "cassandra"
-
-     # Additional labels to set used for the ServiceMonitorSelector. Together with standard labels from
-     # the chart
-     #
      additionalLabels: {}
-
-     # Service label for use in assembling a job name of the form <label value>-<port>
-     # If no label is specified, the service name is used.
-     #
      jobLabel: ""
-
-     # Label selector for services to which this ServiceMonitor applies
-     #
      selector:
        matchLabels:
          metrics: cassandra
-
-     # Namespaces from which services are selected
-     #
      namespaceSelector:
-       # Match any namespace
-       #
        any: false
-
-       # Explicit list of namespace names to select
-       #
        matchNames:
          - "alcide"
-
-     # Endpoints of the selected service to be monitored
-     #
      endpoints:
-       # Name of the endpoint's service port
-       # Mutually exclusive with targetPort
        - port: "http"
-
-       # Name or number of the endpoint's target port
-       # Mutually exclusive with port
        - targetPort: "7070"
-
-         # File containing bearer token to be used when scraping targets
-         #
          bearerTokenFile: ""
-
-         # Interval at which metrics should be scraped
-         #
          interval: 10s
-
-         # HTTP path to scrape for metrics
-         #
          path: /metrics
-
-         # HTTP scheme to use for scraping
-         #
          scheme: http
 
    - name: "mongodb"
-
-     # Additional labels to set used for the ServiceMonitorSelector. Together with standard labels from
-     # the chart
-     #
      additionalLabels: {}
-
-     # Service label for use in assembling a job name of the form <label value>-<port>
-     # If no label is specified, the service name is used.
-     #
      jobLabel: ""
-
-     # Label selector for services to which this ServiceMonitor applies
-     #
      selector:
        matchLabels:
          metrics: mongodb
-
-     # Namespaces from which services are selected
-     #
      namespaceSelector:
-       # Match any namespace
-       #
        any: false
-
-       # Explicit list of namespace names to select
-       #
        matchNames:
          - "alcide"
-
-     # Endpoints of the selected service to be monitored
-     #
      endpoints:
-       # Name of the endpoint's service port
-       # Mutually exclusive with targetPort
        - port: "metrics"
-
-       # Name or number of the endpoint's target port
-       # Mutually exclusive with port
        - targetPort: "9216"
-
-         # File containing bearer token to be used when scraping targets
-         #
          bearerTokenFile: ""
-
-         # Interval at which metrics should be scraped
-         #
          interval: 10s
-
-         # HTTP path to scrape for metrics
-         #
          path: /metrics
-
-         # HTTP scheme to use for scraping
-         #
          scheme: http
 
    - name: "e2e-metricsgw"
-
-     # Additional labels to set used for the ServiceMonitorSelector. Together with standard labels from
-     # the chart
-     #
      additionalLabels: {}
-
-     # Service label for use in assembling a job name of the form <label value>-<port>
-     # If no label is specified, the service name is used.
-     #
      jobLabel: ""
-
-     # Label selector for services to which this ServiceMonitor applies
-     #
      selector:
        matchLabels:
          metrics: e2e-metricsgw
-
-     # Namespaces from which services are selected
-     #
      namespaceSelector:
-       # Match any namespace
-       #
        any: false
-
-       # Explicit list of namespace names to select
-       #
        matchNames:
          - "alcide"
-
-     # Endpoints of the selected service to be monitored
-     #
      endpoints:
-       # Name of the endpoint's service port
-       # Mutually exclusive with targetPort
        - port: "http"
-
-       # Name or number of the endpoint's target port
-       # Mutually exclusive with port
        - targetPort: "9091"
-
-         # File containing bearer token to be used when scraping targets
-         #
          bearerTokenFile: ""
-
-         # Interval at which metrics should be scraped
-         #
          interval: 60s
-
-         # HTTP path to scrape for metrics
-         #
          path: /metrics
-
-         # HTTP scheme to use for scraping
-         #
          scheme: http
+
+   - name: "olympia"
+     additionalLabels: {}
+     jobLabel: ""
+     selector:
+       matchLabels:
+         metrics: olympia
+     namespaceSelector:
+       any: false
+       matchNames:
+         - "alcide"
+     endpoints:
+       - port: "olympia-metrics"
+       - targetPort: "6667"
+         bearerTokenFile: ""
+         interval: 60s
+         path: /metrics
+         scheme: https
+         insecureSkipVerify: true
 
 #      # TLS configuration to use when scraping the endpoint
 #      #
