--- a/stable/prometheus-operator/values.yaml
+++ b/stable/prometheus-operator/values.yaml
@@ -1406,7 +1406,20 @@ prometheus:
        matchNames:
          - "alcide"
      endpoints:
-       - targetPort: "8080"
+       - port: http
+         interval: 30s
+         path: /metrics
+         scheme: http
+
+   - name: "kafka-exporter"
+     selector:
+       matchLabels:
+         metrics: kafka-exporter
+     namespaceSelector:
+       matchNames:
+         - "alcide"
+     endpoints:
+       - port: http
          interval: 30s
          path: /metrics
          scheme: http
@@ -1419,7 +1432,7 @@ prometheus:
        matchNames:
          - "alcide"
      endpoints:
-       - targetPort: "7070"
+       - port: http
          interval: 30s
          path: /metrics
          scheme: http
@@ -1432,7 +1445,7 @@ prometheus:
        matchNames:
          - "alcide"
      endpoints:
-       - targetPort: "7070"
+       - port: http
          interval: 30s
          path: /metrics
          scheme: http
@@ -1445,7 +1458,7 @@ prometheus:
        matchNames:
          - "alcide"
      endpoints:
-       - targetPort: "9216"
+       - port: metrics
          interval: 30s
          path: /metrics
          scheme: http
@@ -1458,7 +1471,7 @@ prometheus:
        matchNames:
          - "alcide"
      endpoints:
-       - targetPort: "9091"
+       - port: http
          interval: 60s
          path: /metrics
          scheme: http
@@ -1471,6 +1484,7 @@ prometheus:
        matchNames:
          - "alcide"
      endpoints:
+       - port: metrics
        - targetPort: "6667"
          interval: 60s
          path: /metrics
