Rename Olympia dashboard

--- a/stable/prometheus-operator/templates/grafana/dashboards/alcide-olympia-dashboard.yaml
+++ b/stable/prometheus-operator/templates/grafana/dashboards/alcide-olympia-dashboard.yaml
@@ -2356,7 +2356,7 @@ data:
                 ]
             },
             "timezone": "",
-            "title": "Olympia",
+            "title": "Alcide /  Olympia",
             "uid": "6663Qsgmz",
             "version": 47
         }
